pdftocairo gives a segmentation fault with -o on a one page document
When calling this command on a one page PDF, I get a segmentation fault (poppler 0.79):
$ ./pdftocairo ./input.pdf -pdf -o output.pdf
Edited by ntoniazzi
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Our infrastructure migration is complete. Please remember to update your SSH remote to point to ssh.gitlab.freedesktop.org; SSH to the old hostname will time out. You should not see any problems apart from that. Please let us know if you do have any other issues.
When calling this command on a one page PDF, I get a segmentation fault (poppler 0.79):
$ ./pdftocairo ./input.pdf -pdf -o output.pdf