pdftoxxx: error out when even/odd selects 0 pages

When page selection options and/or document length result in planned
output of a single page, further even/odd page selection can then
result in no pages being output.  Error out instead of producing no
output which is confusing to the user.

Closes: https://gitlab.freedesktop.org/poppler/poppler/issues/815